--- a/block-BNaaft/eventManagement/views/eventDetails.ejs
+++ b/block-BNaaft/eventManagement/views/eventDetails.ejs
@@ -43,7 +43,7 @@
 
       <% event.remarks.forEach(remark => { %>
       <div>
-        <p>test<%= remark.title %></p>
+        <p><%= remark.title %></p>
         <p><%= remark.author %></p>
         <a href="/remarks/<%= remark.id %>/edit">
           <button>Edit</button>
