--- a/block-BNaaft/eventManagement/views/index.ejs
+++ b/block-BNaaft/eventManagement/views/index.ejs
@@ -2,13 +2,14 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel="stylesheet" href="/eventManagement/public/styles/styles.css" />
+
+    <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
     <% include partials/header %>
     <section>
       <div>
-        <img src="" alt="hero_image" />
+        <img src="/images/logo.png" alt="hero_image" />
       </div>
       <div>
         <h1>Event Management</h1>
