--- a/block-BNaaft/eventManagement/views/events.ejs
+++ b/block-BNaaft/eventManagement/views/events.ejs
@@ -10,7 +10,11 @@
     <h1>List of Events</h1>
     <a href="/events/new">Add Event</a>
 
-    <% events.forEach(event => { %>
+    <% categories.forEach(category => { %>
+
+    <h3><%= category %></h3>
+
+    <% }) %> <% events.forEach(event => { %>
 
     <section>
       <div>
